Fix 100vh issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  height: 100vh;
+  max-height: -webkit-fill-available;
+}
+
+#app {
+  height: 100%;
+}
+
 .underline-effect {
   &::before {
     content: "";
